# injectinator

./: .gitignore  CONTRIBUTING  CONTRIBUTING.md  LICENSE.md  README.md  inject.py  main.py  pyproject.toml  test_inject.py
.github/workflows/: publish.yml  test.yml
src/injectinator/: __init__.py  typed.py
tests/: test_inject.py
