[project]
name = "Injectinator"
version = "0.4.0"
description = "Very simple dependency injection"
authors = [
    {name = "Chris Read",email = "centurix@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
license = {text = "MIT"}
keywords = ["dependency", "injection", "di", "decorator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries"
]

[project.urls]
homepage = "https://github.com/Centurix/injectinator"
repository = "https://github.com/Centurix/injectinator"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.setuptools]
license-files = []

[tool.pytest.ini_options]
pythonpath = [".", "src"]